yaml/logging/02-elasticsearch/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/whitelist-source-range: "10.146.0.0/24,10.174.0.0/24,10.146.0.10/32"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Butuh Autentikasi Dulu Bossss'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - elasticsearch.mykloud.andikaahmad.com
      secretName: letsencrypt-prod-elasticsearch
  rules:
  - host: elasticsearch.mykloud.andikaahmad.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mykloud-master
            port:
              number: 9200
